--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -1,1 +1,14 @@
-This file not actually used by django-todo - here to satisfy the test runner.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>{% block title %}My amazing site{% endblock %}</title>
+    {% load static %}
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>    
+</head>
+<body>
+{% block content %}{% endblock %}
+</body>
+{% block extra_js %}{% endblock extra_js %}
+</html>
